bynkc/tests/fixtures/negative/106_state_refined_no_zero/src/demo/gauge.bynk
context demo.gauge

type Positive = Int where Positive

type Id = String where Matches("[a-z0-9]{1,8}")

agent Gauge {
	key id: Id

	store level: Cell[Positive]

	on call current() -> Effect[Positive] {
		level
	}
}
